--- a/Pipfile
+++ b/Pipfile
@@ -7,5 +7,6 @@ name = "pypi"
 speechrecognition = "*"
 pyttsx3 = "*"
 pyaudio = {path = "./PyAudio-0.2.11-cp310-cp310-win_amd64.whl"}
+wikipedia = "*"
 
 [dev-packages]
